crates/reinhardt-pages/tests/ui/style/fail/invalid_function_arguments.stderr
error: argument 1 to `rotate` has type `Length`; expected Angle
 --> tests/ui/style/fail/invalid_function_arguments.rs:4:64
  |
4 | static STYLES: CardStyles = style! { .card { transform: rotate(1px); } };
  |                                                                ^^^
